<resources>
    <string name="app_name">Synoptic</string>

    <!-- Menu drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="main_nav_current_location_title">Current location</string>
    <string name="main_nav_settings">Settings</string>
    <string name="main_nav_about">About</string>

    <!-- Weather -->
    <string name="weather_pressure_pascals">%1$d Pa</string>
    <string name="weather_pressure_bar">%1$d bar</string>
    <string name="weather_pressure_mmHg">%1$d mmHg</string>
    <string name="weather_pressure_inHg">%1$d inHg</string>
    <string name="weather_humidity" translatable="false">%1$d%%</string>
    <string name="weather_clouds" translatable="false">%1$d%%</string>
    <string name="weather_wind_kph">%1$d km/h</string>
    <string name="weather_wind_mph">%1$d mi/h</string>
    <string name="weather_wind_mps">%1$d m/s</string>

    <!-- Settings -->
    <string name="pref_activity_title">Settings</string>
    <string name="pref_header_style">Interface</string>
    <string name="pref_night_mode">Night mode</string>
    <string name="pref_night_mode_sum">Light text on a dark background</string>
    <string name="pref_night_mode_key" translatable="false">pref_keys.night_mode</string>
    <string name="pref_header_units">Units</string>
    <string name="pref_temp_units">Temperature units</string>
    <string name="pref_temp_units_key" translatable="false">pref_keys.temp_units</string>
    <string name="pref_temp_units_default" translatable="false">CELSIUS</string>
    <string name="pref_temp_units_celsius">Celsius ˚C</string>
    <string name="pref_temp_units_fahrenheit">Fahrenheit ˚F</string>
    <string name="pref_temp_units_celsius_sign" translatable="false">˚C</string>
    <string name="pref_temp_units_fahrenheit_sign" translatable="false">˚F</string>
    <string name="pref_header_sync">Sync</string>
    <string name="pref_sync_weather">Synchronize weather</string>
    <string name="pref_sync_weather_sum">Synchronize weather in background with selected interval</string>
    <string name="pref_sync_weather_key" translatable="false">pref_keys.sync_weather</string>
    <string name="pref_sync_weather_interval">Synchronization interval</string>
    <string name="pref_sync_weather_interval_key" translatable="false">pref_keys.sync_weather_period</string>
    <string name="pref_sync_weather_interval_default" translatable="false">60</string>
    <string name="pref_sync_weather_interval_15_min">15 min</string>
    <string name="pref_sync_weather_interval_30_min">30 min</string>
    <string name="pref_sync_weather_interval_1_hour">1 hour</string>
    <string name="pref_sync_weather_interval_3_hours">3 hours</string>
    <string name="pref_sync_weather_interval_6_hours">6 hours</string>
    <string name="pref_sync_weather_interval_12_hours">12 hours</string>
    <string name="pref_locale_default" translatable="false">en</string>

    <!-- About -->
    <string name="about_activity_title">About</string>
    <string name="about_email_developer_button">Email developer</string>
    <string name="about_email" translatable="false">v.andrikeev@yandex.ru</string>
    <string name="about_rate_app_button">Rate application</string>
    <string name="about_view_licenses_button">Licenses</string>
    <string name="about_version_name">Version</string>
    <string name="about_email_developer_key" translatable="false">pref_keys.email_developer</string>
    <string name="about_rate_app_key" translatable="false">pref_keys.rate_app</string>
    <string name="about_view_licenses_key" translatable="false">pref_keys.licenses</string>
    <string name="about_version_key" translatable="false">pref_keys.version</string>

    <!-- City -->
    <string name="city_activity_title">Select city</string>

    <string name="pref_city_name" translatable="false">pref_keys.city_name</string>
    <string name="pref_city_id" translatable="false">pref_keys.city_id</string>

    <string name="pref_city_name_default">Moscow</string>
    <string name="pref_city_id_default" translatable="false">5601538</string>
</resources>
